--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,8 +23,14 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Upload Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: dotnet-build-artifacts
         path: |
           **/bin/debug/net9.0/**
+
+          - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-output  # Artifact 名称
+          path: output        
