--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/AssandQrcConverter/FileContentIndex/0b266bdc-f50a-4e40-99b6-4926799d57a7.vsidx
+/AssandQrcConverter.csproj.user
