--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,4 +27,4 @@ jobs:
       with:
         name: dotnet-build-artifacts
         path: |
-          **/bin/debug/net9.0/**
+          **/bin/debug/net10.0-windows10.0.26100.0/**
