修正ASS转QRC的一个问题

--- a/AssandQrcConverter.csproj
+++ b/AssandQrcConverter.csproj
@@ -10,13 +10,14 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DebugType>none</DebugType>
+    <DebugType>portable</DebugType>
     <WarningLevel>9999</WarningLevel>
     <NoWarn />
+    <Optimize>False</Optimize>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DebugType>none</DebugType>
+    <DebugType>portable</DebugType>
     <WarningLevel>9999</WarningLevel>
     <NoWarn />
   </PropertyGroup>
